:sparkles: - Updated meta descriptions for better readability in "BOT A.N.I.C", "Le LAB", and "Rice Battle" pages. - Added new CSS styles for game pages to enhance layout and design. - Introduced a new game page for "Camasiat" and structure. - Included platform icons for Switch, Xbox, and PlayStation in the index page.

--- a/games/Camasiat.html
+++ b/games/Camasiat.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="A Little Adventure est un jeu de plateforme en 3D où le joueur explore un monde coloré rempli de défis en tout genre. Il sera amené à se battre contre des monstres, résoudre de petites énigmes et s’aventurer dans des niveaux de plus en plus difficiles. Son objectif est simple, compléter tous les niveaux et trouver les jetons cachés dans chacun d’entre eux." />
-    <title>LaCorbeille STUDIO | A Little Adventure</title>
+    <meta name="description" content="Camasiat" />
+    <title>LaCorbeille STUDIO | Camasiat</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -34,10 +33,10 @@
     {
         "@context": "https://schema.org",
         "@type": "VideoGame",
-        "name": "A Little Adventure",
-        "url": "https://lacorbeille.studio/games/A%20Little%20Adventure.html",
-        "image": "https://lacorbeille.studio/assets/img/games/ALittleAdventure/ALittleAdventure - SmallBanner.jpg",
-        "description": "A Little Adventure est un jeu de plateforme en 3D où le joueur explore un monde coloré rempli de défis en tout genre. Il sera amené à se battre contre des monstres, résoudre de petites énigmes et s’aventurer dans des niveaux de plus en plus difficiles. Son objectif est simple, compléter tous les niveaux et trouver les jetons cachés dans chacun d’entre eux.",
+        "name": "Camasiat",
+        "url": "https://lacorbeille.studio/games/Camasiat.html",
+        "image": "https://placehold.co/300x450?text=Camasiat",
+        "description": "",
         "author": {
             "@type": "Organization",
             "name": "LaCorbeille STUDIO",
@@ -48,7 +47,7 @@
             "name": "LaCorbeille STUDIO",
             "url": "https://lacorbeille.studio"
         },
-        "genre": "Platformer",
+        "genre": "First-person shooter",
         "operatingSystem": "Windows",
         "applicationCategory": "Game",
         "inLanguage": "fr",
@@ -56,27 +55,23 @@
     }
     </script>
     <!-- OpenGraph -->
-    <meta property="og:title" content="LaCorbeille STUDIO - A Little Adventure" />
-    <meta property="og:description"
-        content="A Little Adventure est un jeu de plateforme en 3D où le joueur explore un monde coloré rempli de défis en tout genre. Il sera amené à se battre contre des monstres, résoudre de petites énigmes et s’aventurer dans des niveaux de plus en plus difficiles. Son objectif est simple, compléter tous les niveaux et trouver les jetons cachés dans chacun d’entre eux." />
-    <meta property="og:image"
-        content="https://lacorbeille.studio/assets/img/games/ALittleAdventure/ALittleAdventure - SmallBanner.jpg" />
-    <meta property="og:url" content="https://lacorbeille.studio/games/A%20Little%20Adventure.html" />
+    <meta property="og:title" content="LaCorbeille STUDIO - Camasiat" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="https://placehold.co/300x450?text=Camasiat" />
+    <meta property="og:url" content="https://lacorbeille.studio/games/Camasiat.html" />
     <meta property="og:type" content="video.game" />
     <meta property="og:locale" content="fr_FR" />
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="LaCorbeille STUDIO - A Little Adventure" />
-    <meta name="twitter:description"
-        content="A Little Adventure est un jeu de plateforme en 3D où le joueur explore un monde coloré rempli de défis en tout genre. Il sera amené à se battre contre des monstres, résoudre de petites énigmes et s’aventurer dans des niveaux de plus en plus difficiles. Son objectif est simple, compléter tous les niveaux et trouver les jetons cachés dans chacun d’entre eux." />
-    <meta name="twitter:image"
-        content="https://lacorbeille.studio/assets/img/games/ALittleAdventure/ALittleAdventure - SmallBanner.jpg" />
+    <meta name="twitter:title" content="LaCorbeille STUDIO - Camasiat" />
+    <meta name="twitter:description" content="" />
+    <meta name="twitter:image" content="https://placehold.co/300x450?text=Camasiat" />
     <meta name="twitter:site" content="@LaCorbeilleSTD" />
 </head>
 
 <body>
     <header>
-        <h1 style="display:none">A Little Adventure</h1>
+        <h1 style="display:none">Camasiat</h1>
         <a href="../index.html" id="logoFull"><img src="../assets/img/branding/LogoFullWhite.svg"
                 alt="LaCorbeille STUDIO - LogoFull"></a>
         <a href="../index.html" id="logoSmall"><img src="../assets/img/branding/LogoSmallWhite.svg"
@@ -90,20 +85,19 @@
         </nav>
     </header>
     <main>
-        <img src="../assets/img/games/ALittleAdventure/ALittleAdventure - Banner.jpg" alt="A Little Adventure - Banner" id="banner">
-        <h1>A Little Adventure</h1>
+        <img src="https://placehold.co/1500x600?text=Camasiat" alt="Camasiat - Banner" id="banner">
+        <h1>Camasiat</h1>
         <div id="gameInfo">
             <div><a>Platformer</a><a>Aventure</a><a>Puzzle</a><a>3D</a></div>
-            <div><a>Windows</a><a>Linux</a></div>
+            <div><a>Windows</a><a>Linux</a><a>XBox</a><a>PlayStation</a></div>
         </div>
         <div id="description">
-            <p>A Little Adventure est un jeu de plateforme en 3D où le joueur explore un monde coloré rempli de défis en
-                tout genre. Il sera amené à se battre contre des monstres, résoudre de petites énigmes et s’aventurer
-                dans des niveaux de plus en plus difficiles. Son objectif est simple, compléter tous les niveaux et
-                trouver les jetons cachés dans chacun d’entre eux.
+            <p>
+
+            </p>
+            <p>
             </p>
         </div>
-        <button onclick="window.open('https://drive.google.com/file/d/1mVtrC2cRTI8DI0T2eytNDROx7p7a3r1G/view?usp=sharing', '_blank')">Télécharger le prototype</button>
     </main>
     <footer>
         <div id="branding">
