--- a/games/Le LAB.html
+++ b/games/Le LAB.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Le LAB est un FPS dynamique qui met l'accent sur des affrontements rapides entre amis dans des arènes personnalisables. Avec des mécaniques de déplacement avancées, Le LAB encourage des stratégies basées sur la mobilité et des réflexes instantanés." />
+    <meta name="description"
+        content="Le LAB est un FPS dynamique qui met l'accent sur des affrontements rapides entre amis dans des arènes personnalisables. Avec des mécaniques de déplacement avancées, Le LAB encourage des stratégies basées sur la mobilité et des réflexes instantanés." />
     <title>LaCorbeille STUDIO | Le LAB</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon/apple-touch-icon.png">
@@ -17,13 +18,16 @@
     <link rel="stylesheet" href="../css/responsive/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/responsive/footer.css">
+    <link rel="stylesheet" href="../css/games/games.css">
+    <link rel="stylesheet" href="../css/responsive/games/games.css">
     <!-- JS -->
     <script src="../js/dynamicTitle.js" defer></script>
     <script src="../js/rightClick.js" defer></script>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
     <!-- Schema.org -->
     <script type="application/ld+json">
@@ -53,7 +57,8 @@
     </script>
     <!-- OpenGraph -->
     <meta property="og:title" content="LaCorbeille STUDIO - Le LAB" />
-    <meta property="og:description" content="Le LAB est un FPS dynamique qui met l'accent sur des affrontements rapides entre amis dans des arènes personnalisables. Avec des mécaniques de déplacement avancées, Le LAB encourage des stratégies basées sur la mobilité et des réflexes instantanés." />
+    <meta property="og:description"
+        content="Le LAB est un FPS dynamique qui met l'accent sur des affrontements rapides entre amis dans des arènes personnalisables. Avec des mécaniques de déplacement avancées, Le LAB encourage des stratégies basées sur la mobilité et des réflexes instantanés." />
     <meta property="og:image" content="https://lacorbeille.studio/assets/img/games/LeLAB/LeLAB - SmallBanner.jpg" />
     <meta property="og:url" content="https://lacorbeille.studio/games/Le%20LAB.html" />
     <meta property="og:type" content="video.game" />
@@ -61,16 +66,18 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="LaCorbeille STUDIO - Le LAB" />
-    <meta name="twitter:description" content="Le LAB est un FPS dynamique qui met l'accent sur des affrontements rapides entre amis dans des arènes personnalisables. Avec des mécaniques de déplacement avancées, Le LAB encourage des stratégies basées sur la mobilité et des réflexes instantanés." />
+    <meta name="twitter:description"
+        content="Le LAB est un FPS dynamique qui met l'accent sur des affrontements rapides entre amis dans des arènes personnalisables. Avec des mécaniques de déplacement avancées, Le LAB encourage des stratégies basées sur la mobilité et des réflexes instantanés." />
     <meta name="twitter:image" content="https://lacorbeille.studio/assets/img/games/LeLAB/LeLAB - SmallBanner.jpg" />
     <meta name="twitter:site" content="@LaCorbeilleSTD" />
 </head>
 
 <body>
     <header>
-        <h1 style="display:none">Le LAB</h1>
-        <a href="../index.html" id="logoFull"><img src="../assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull"></a>
-        <a href="../index.html" id="logoSmall"><img src="../assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall"></a>
+        <a href="../index.html" id="logoFull"><img src="../assets/img/branding/LogoFullWhite.svg"
+                alt="LaCorbeille STUDIO - LogoFull"></a>
+        <a href="../index.html" id="logoSmall"><img src="../assets/img/branding/LogoSmallWhite.svg"
+                alt="LaCorbeille STUDIO - LogoSmall"></a>
         <nav>
             <ul>
                 <li><a href="../index.html#games-section">Jeux</a></li>
@@ -80,7 +87,24 @@
         </nav>
     </header>
     <main>
-        
+        <img src="../assets/img/games/LeLAB/LeLAB - Banner.jpg" alt="Le LAB - Banner" id="banner">
+        <h1>Le LAB</h1>
+        <div id="gameInfo">
+            <div><a>First-Person Shooter (FPS)</a><a>Action</a><a>3D</a></div>
+            <div><a>Windows</a><a>Linux</a></div>
+        </div>
+        <div id="description">
+            <p>Le LAB est un FPS dynamique qui met l'accent sur des affrontements rapides entre amis dans des arènes
+                personnalisables. Avec des mécaniques de déplacement avancées, Le LAB encourage des stratégies basées
+                sur la mobilité et des réflexes instantanés.
+            </p>
+            <p>Les joueurs auront la possibilité de créer leurs propres cartes, favorisant une créativité sans limite.
+                Chaque carte se présente sous un style de "level prototyping", utilisant des textures, formes et
+                structures simples. Le jeu est orienté vers la compétition amicale et la personnalisation, offrant aux
+                joueurs l’opportunité de défier leurs amis dans des environnements qu'ils ont eux-mêmes conçus.
+            </p>
+        </div>
+        <button onclick="window.open('https://drive.google.com/file/d/1_G6ltE7hH8wrITmecVYSm0CogHib0WJs/view?usp=sharing', '_blank')">Télécharger le prototype</button>
     </main>
     <footer>
         <div id="branding">
@@ -93,15 +117,21 @@
         <div id="links">
             <a href="../sitemap.xml">Sitemap</a>
             <a href="../legal.html">Legal notice</a>
-            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing" target="_blank">Press kit</a>
+            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing"
+                target="_blank">Press kit</a>
         </div>
         <div id="socials">
-            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg" alt="Itch.io"></a>
-            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg" alt="Discord"></a>
-            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
-            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg"
+                    alt="Itch.io"></a>
+            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg"
+                    alt="Discord"></a>
+            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img
+                    src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img
+                    src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
             <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="../assets/img/social/X.svg" alt="X"></a>
-            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
+            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img
+                    src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
