--- a/games/Rice Battle.html
+++ b/games/Rice Battle.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement." />
+    <meta name="description"
+        content="RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement." />
     <title>LaCorbeille STUDIO | Rice Battle</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon/apple-touch-icon.png">
@@ -17,13 +18,16 @@
     <link rel="stylesheet" href="../css/responsive/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/responsive/footer.css">
+    <link rel="stylesheet" href="../css/games/games.css">
+    <link rel="stylesheet" href="../css/responsive/games/games.css">
     <!-- JS -->
     <script src="../js/dynamicTitle.js" defer></script>
     <script src="../js/rightClick.js" defer></script>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
     <!-- Schema.org -->
     <script type="application/ld+json">
@@ -53,24 +57,30 @@
     </script>
     <!-- OpenGraph -->
     <meta property="og:title" content="LaCorbeille STUDIO - Rice Battle" />
-    <meta property="og:description" content="RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement." />
-    <meta property="og:image" content="https://lacorbeille.studio/assets/img/games/RiceBattle/RiceBattle - SmallBanner.jpg" />
+    <meta property="og:description"
+        content="RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement." />
+    <meta property="og:image"
+        content="https://lacorbeille.studio/assets/img/games/RiceBattle/RiceBattle - SmallBanner.jpg" />
     <meta property="og:url" content="https://lacorbeille.studio/games/Rice%20Battle.html" />
     <meta property="og:type" content="video.game" />
     <meta property="og:locale" content="fr_FR" />
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="LaCorbeille STUDIO - Rice Battle" />
-    <meta name="twitter:description" content="RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement." />
-    <meta name="twitter:image" content="https://lacorbeille.studio/assets/img/games/RiceBattle/RiceBattle - SmallBanner.jpg" />
+    <meta name="twitter:description"
+        content="RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement." />
+    <meta name="twitter:image"
+        content="https://lacorbeille.studio/assets/img/games/RiceBattle/RiceBattle - SmallBanner.jpg" />
     <meta name="twitter:site" content="@LaCorbeilleSTD" />
 </head>
 
 <body>
     <header>
         <h1 style="display:none"> Rice Battle</h1>
-        <a href="../index.html" id="logoFull"><img src="../assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull"></a>
-        <a href="../index.html" id="logoSmall"><img src="../assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall"></a>
+        <a href="../index.html" id="logoFull"><img src="../assets/img/branding/LogoFullWhite.svg"
+                alt="LaCorbeille STUDIO - LogoFull"></a>
+        <a href="../index.html" id="logoSmall"><img src="../assets/img/branding/LogoSmallWhite.svg"
+                alt="LaCorbeille STUDIO - LogoSmall"></a>
         <nav>
             <ul>
                 <li><a href="../index.html#games-section">Jeux</a></li>
@@ -80,7 +90,27 @@
         </nav>
     </header>
     <main>
-        
+        <img src="../assets/img/games/RiceBattle/RiceBattle - Banner.jpg" alt="Rice Battle - Banner" id="banner">
+        <h1>Rice Battle</h1>
+        <div id="gameInfo">
+            <div><a>Fighter</a><a>2.5D</a></div>
+            <div><a>Windows</a><a>Linux</a><a>Switch</a></div>
+        </div>
+        <div id="description">
+            <p>RiceBattle est un jeu de combat en 2.5D pour deux joueurs, où les environnements sont modélisés en 3D
+                tandis que les personnages et les éléments d’interaction sont en 2D. Le jeu se déroule dans un univers
+                inspiré par la cuisine asiatique dans lequel les personnages peuvent interagir avec l’environnement.
+            </p>
+            <p>RiceBattle propose des combats personnalisables, permettant aux joueurs de définir le nombre de manches
+                et de choisir le type de contrôleur comme une manette ou un clavier. Dans ce jeu, les combattants
+                incarnent divers aliments emblématiques de la cuisine asiatique, tels que des onigiris, des boulettes de
+                riz et des sushis, avec de nouveaux personnages à venir. Au cours des manches, des items spéciaux comme
+                la sauce soja et le wasabi apparaissent pour offrir aux joueurs des buffs temporaires et ajouter une
+                touche pimentée aux combats. De plus, les personnages peuvent interagir avec le décor, créant ainsi des
+                opportunités de jeu tactique.
+            </p>
+        </div>
+        <button onclick="window.open('https://drive.google.com/file/d/1RZY6pJFEC8axm4i6qERfnNTpXdzJos8y/view?usp=sharing', '_blank')">Télécharger le prototype</button>
     </main>
     <footer>
         <div id="branding">
@@ -93,15 +123,21 @@
         <div id="links">
             <a href="../sitemap.xml">Sitemap</a>
             <a href="../legal.html">Legal notice</a>
-            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing" target="_blank">Press kit</a>
+            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing"
+                target="_blank">Press kit</a>
         </div>
         <div id="socials">
-            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg" alt="Itch.io"></a>
-            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg" alt="Discord"></a>
-            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
-            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg"
+                    alt="Itch.io"></a>
+            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg"
+                    alt="Discord"></a>
+            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img
+                    src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img
+                    src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
             <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="../assets/img/social/X.svg" alt="X"></a>
-            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
+            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img
+                    src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
