--- a/games/BOT A.N.I.C.html
+++ b/games/BOT A.N.I.C.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="BOT - A.N.I.C est un jeu d'action-aventure à la troisième personne avec des éléments de stratégie et de survie. Le jeu propose un équilibre entre exploration, combats stratégiques, et des choix" />
+    <meta name="description"
+        content="BOT - A.N.I.C est un jeu d'action-aventure à la troisième personne avec des éléments de stratégie et de survie. Le jeu propose un équilibre entre exploration, combats stratégiques, et des choix" />
     <title>LaCorbeille STUDIO | BOT A.N.I.C</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon/apple-touch-icon.png">
@@ -17,13 +18,16 @@
     <link rel="stylesheet" href="../css/responsive/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/responsive/footer.css">
+    <link rel="stylesheet" href="../css/games/games.css">
+    <link rel="stylesheet" href="../css/responsive/games/games.css">
     <!-- JS -->
     <script src="../js/dynamicTitle.js" defer></script>
     <script src="../js/rightClick.js" defer></script>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
     <!-- Schema.org -->
     <script type="application/ld+json">
@@ -53,7 +57,8 @@
     </script>
     <!-- OpenGraph -->
     <meta property="og:title" content="LaCorbeille STUDIO - BOT A.N.I.C" />
-    <meta property="og:description" content="BOT - A.N.I.C est un jeu d'action-aventure à la troisième personne avec des éléments de stratégie et de survie. Le jeu propose un équilibre entre exploration, combats stratégiques, et des choix" />
+    <meta property="og:description"
+        content="BOT - A.N.I.C est un jeu d'action-aventure à la troisième personne avec des éléments de stratégie et de survie. Le jeu propose un équilibre entre exploration, combats stratégiques, et des choix" />
     <meta property="og:image" content="https://placehold.co/300x450?text=BOT%20A.N.I.C" />
     <meta property="og:url" content="https://lacorbeille.studio/games/BOT%20A.N.I.C.html" />
     <meta property="og:type" content="video.game" />
@@ -61,7 +66,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="LaCorbeille STUDIO - BOT A.N.I.C" />
-    <meta name="twitter:description" content="BOT - A.N.I.C est un jeu d'action-aventure à la troisième personne avec des éléments de stratégie et de survie. Le jeu propose un équilibre entre exploration, combats stratégiques, et des choix" />
+    <meta name="twitter:description"
+        content="BOT - A.N.I.C est un jeu d'action-aventure à la troisième personne avec des éléments de stratégie et de survie. Le jeu propose un équilibre entre exploration, combats stratégiques, et des choix" />
     <meta name="twitter:image" content="https://placehold.co/300x450?text=BOT%20A.N.I.C" />
     <meta name="twitter:site" content="@LaCorbeilleSTD" />
 </head>
@@ -69,8 +75,10 @@
 <body>
     <header>
         <h1 style="display:none">BOT A.N.I.C</h1>
-        <a href="../index.html" id="logoFull"><img src="../assets/img/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO - LogoFull"></a>
-        <a href="../index.html" id="logoSmall"><img src="../assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall"></a>
+        <a href="../index.html" id="logoFull"><img src="../assets/img/branding/LogoFullWhite.svg"
+                alt="LaCorbeille STUDIO - LogoFull"></a>
+        <a href="../index.html" id="logoSmall"><img src="../assets/img/branding/LogoSmallWhite.svg"
+                alt="LaCorbeille STUDIO - LogoSmall"></a>
         <nav>
             <ul>
                 <li><a href="../index.html#games-section">Jeux</a></li>
@@ -80,7 +88,38 @@
         </nav>
     </header>
     <main>
-        
+        <img src="https://placehold.co/1500x600?text=BOT%20A.N.I.C" alt="BOT A.N.I.C - Banner" id="banner">
+        <h1>BOT A.N.I.C</h1>
+        <div id="gameInfo">
+            <div><a>Platformer</a><a>Aventure</a><a>Puzzle</a><a>3D</a></div>
+            <div><a>Windows</a><a>Linux</a><a>XBox</a><a>PlayStation</a></div>
+        </div>
+        <div id="description">
+            <p>A.N.I.C (Androïde avec Noyau Intelligent de Combat) s’éveille tardivement dans un laboratoire souterrain
+                en ruine de NEMESIS Corp, envahi par des racines et des plantes mutantes. Dévasté par le temps, ce
+                laboratoire, autrefois un fleuron de la robotique IA, résonne des alarmes d’urgence déclenchées des
+                années auparavant pour contrer l’invasion végétale. À son réveil, A.N.I.C découvre un monde
+                post-apocalyptique où la nature a triomphé de l’humanité, presque éradiquée par les plantes
+                mutantes.<br>
+                Face à un monde hostile, où des robots errent avec des programmes corrompus, A.N.I.C doit rapidement
+                maîtriser ses compétences, sortir du laboratoire et découvrir l’origine de cette invasion. Le joueur
+                affrontera des plantes agressives et des machines de guerre, explorant des lieux où technologie ruinée
+                et nature destructrice s’entrelacent. Les choix influenceront l’histoire et le destin du monde, dans une
+                quête où survie et découverte sont essentielles.
+
+            </p>
+            <p>BOT - A.N.I.C est un jeu d'action-aventure à la troisième personne avec des éléments de stratégie et de
+                survie. Le joueur incarne A.N.I.C, un androïde de combat doté d'une intelligence artificielle avancée,
+                qui évolue dans un monde post-apocalyptique où la nature a repris ses droits de manière hostile et
+                incontrôlée. Le jeu propose un équilibre entre exploration, combats stratégiques, et des choix moraux
+                ayant un impact sur le développement de l'histoire et des relations avec les autres personnages ou
+                factions rencontrées.<br>
+                Le gameplay se divise entre des affrontements tactiques, la gestion des ressources limitées,
+                l'amélioration des compétences d'A.N.I.C, et la résolution d'énigmes environnementales qui dévoilent les
+                secrets du passé. Les environnements offrent une direction artistique marquée, illustrant la fusion de
+                la technologie déchue et de la nature mutante, créant une ambiance immersive et unique.
+            </p>
+        </div>
     </main>
     <footer>
         <div id="branding">
@@ -93,15 +132,21 @@
         <div id="links">
             <a href="../sitemap.xml">Sitemap</a>
             <a href="../legal.html">Legal notice</a>
-            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing" target="_blank">Press kit</a>
+            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing"
+                target="_blank">Press kit</a>
         </div>
         <div id="socials">
-            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg" alt="Itch.io"></a>
-            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg" alt="Discord"></a>
-            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
-            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg"
+                    alt="Itch.io"></a>
+            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg"
+                    alt="Discord"></a>
+            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img
+                    src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img
+                    src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
             <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="../assets/img/social/X.svg" alt="X"></a>
-            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
+            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img
+                    src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
