--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
+                        <img src="assets/img/platforms/Switch.svg" alt="Switch">
                     </div>
                 </div>
                 <div class="game-card" onclick="window.location.href='games/A Little Adventure.html'">
@@ -155,10 +156,12 @@
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
+                        <img src="assets/img/platforms/XBox.svg" alt="XBox">
+                        <img src="assets/img/platforms/PlayStation.svg" alt="Playstation">
                     </div>
                 </div>
                 <div class="game-card">
-                    <img src="https://placehold.co/300x450?text=Camasia" alt="Placeholder">
+                    <img src="https://placehold.co/300x450?text=Camasiat" alt="Placeholder">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
