:truck: Rename Camasia to Archipel

--- a/games/Archipel.html
+++ b/games/Archipel.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Camasiat" />
-    <title>LaCorbeille STUDIO | Camasiat</title>
+    <meta name="description" content="Archipel" />
+    <title>LaCorbeille STUDIO | Archipel</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -33,9 +33,9 @@
     {
         "@context": "https://schema.org",
         "@type": "VideoGame",
-        "name": "Camasiat",
-        "url": "https://lacorbeille.studio/games/Camasiat.html",
-        "image": "https://placehold.co/300x450?text=Camasiat",
+        "name": "Archipel",
+        "url": "https://lacorbeille.studio/games/Archipel.html",
+        "image": "https://placehold.co/300x450?text=Archipel",
         "description": "",
         "author": {
             "@type": "Organization",
@@ -55,23 +55,23 @@
     }
     </script>
     <!-- OpenGraph -->
-    <meta property="og:title" content="LaCorbeille STUDIO - Camasiat" />
+    <meta property="og:title" content="LaCorbeille STUDIO - Archipel" />
     <meta property="og:description" content="" />
-    <meta property="og:image" content="https://placehold.co/300x450?text=Camasiat" />
-    <meta property="og:url" content="https://lacorbeille.studio/games/Camasiat.html" />
+    <meta property="og:image" content="https://placehold.co/300x450?text=Archipel" />
+    <meta property="og:url" content="https://lacorbeille.studio/games/Archipel.html" />
     <meta property="og:type" content="video.game" />
     <meta property="og:locale" content="fr_FR" />
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="LaCorbeille STUDIO - Camasiat" />
+    <meta name="twitter:title" content="LaCorbeille STUDIO - Archipel" />
     <meta name="twitter:description" content="" />
-    <meta name="twitter:image" content="https://placehold.co/300x450?text=Camasiat" />
+    <meta name="twitter:image" content="https://placehold.co/300x450?text=Archipel" />
     <meta name="twitter:site" content="@LaCorbeilleSTD" />
 </head>
 
 <body>
     <header>
-        <h1 style="display:none">Camasiat</h1>
+        <h1 style="display:none">Archipel</h1>
         <a href="../index.html" id="logoFull"><img src="../assets/img/branding/LogoFullWhite.svg"
                 alt="LaCorbeille STUDIO - LogoFull"></a>
         <a href="../index.html" id="logoSmall"><img src="../assets/img/branding/LogoSmallWhite.svg"
@@ -85,8 +85,8 @@
         </nav>
     </header>
     <main>
-        <img src="https://placehold.co/1500x600?text=Camasiat" alt="Camasiat - Banner" id="banner">
-        <h1>Camasiat</h1>
+        <img src="https://placehold.co/1500x600?text=Archipel" alt="Archipel - Banner" id="banner">
+        <h1>Archipel</h1>
         <div id="gameInfo">
             <div><a>Platformer</a><a>Aventure</a><a>Puzzle</a><a>3D</a></div>
             <div><a>Windows</a><a>Linux</a><a>XBox</a><a>PlayStation</a></div>
