--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="game-card">
-                    <img src="https://placehold.co/300x450?text=Camasiat" alt="Placeholder">
+                    <img src="https://placehold.co/300x450?text=Archipel" alt="Placeholder">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
