:sparkles: Update Archipel game description and add link in index.html

--- a/games/Archipel.html
+++ b/games/Archipel.html
@@ -88,14 +88,30 @@
         <img src="https://placehold.co/1500x600?text=Archipel" alt="Archipel - Banner" id="banner">
         <h1>Archipel</h1>
         <div id="gameInfo">
-            <div><a>Platformer</a><a>Aventure</a><a>Puzzle</a><a>3D</a></div>
-            <div><a>Windows</a><a>Linux</a><a>XBox</a><a>PlayStation</a></div>
+            <div><a>Troisième personne</a><a>Aventure</a><a>Stratégie</a><a>3D</a></div>
+            <div><a>Windows</a><a>Linux</a><a>XBox</a><a>PlayStation</a><a>Switch</a></div>
         </div>
         <div id="description">
-            <p>
-
+            <p>Archipel est un jeu solo en 3D, stylisé, en vue à la troisième personne, mêlant aventure, exploration,
+                stratégie, combat et gestion de ressources. Le joueur incarne un personnage qui se réveille sur une île
+                flottante dans son village natal après avoir échoué lors d'une tentative d’exploration de l’archipel.
+                Marqué par la défaite, il décide de se préparer à nouveau pour repartir à la conquête des îles célestes
+                qui l'entourent.
             </p>
-            <p>
+            <p>Chaque île de l’archipel propose des environnements uniques et des activités variées, permettant au
+                joueur de choisir librement ses objectifs et son style de jeu selon son humeur du moment. Que ce soit en
+                explorant la faune locale, en prenant des photos, en pêchant, en chassant des insectes, en affrontant
+                des créatures hostiles ou en cultivant les plantes de son village, Archipel offre une expérience riche
+                et évolutive.
+            </p>
+            <p>Le système de combat stratégique permet de progresser dans l’archipel, tout en offrant la possibilité
+                d’apprivoiser certains monstres en les affrontant sans leur infliger de dégâts : observer, esquiver,
+                encaisser, puis gagner leur confiance grâce à la nourriture. Toute tentative de blessure brise
+                définitivement cette opportunité.
+            </p>
+            <p>Le jeu met aussi l’accent sur la personnalisation du personnage, le crafting, la construction, et
+                l’amélioration de l’équipement à partir de ressources récoltées dans le monde. L’univers d’Archipel est
+                pensé comme un terrain de jeu vivant, où chaque joueur peut s’immerger à son propre rythme.
             </p>
         </div>
     </main>
