--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <img src="assets/img/platforms/PlayStation.svg" alt="Playstation">
                     </div>
                 </div>
-                <div class="game-card">
+                <div class="game-card" onclick="window.location.href='games/Archipel.html'">
                     <img src="https://placehold.co/300x450?text=Archipel" alt="Placeholder">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
