--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
             <div>
                 <div id="whiteBackground"></div>
                 <div class="game-card" onclick="window.location.href='games/Le LAB.html'">
-                    <img src="assets/img/games/LeLAB/LeLAB - Cover.jpg" alt="Placeholder">
+                    <img src="assets/img/games/LeLAB/LeLAB - Cover.jpg" alt="Le LAB">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
                     </div>
                 </div>
                 <div class="game-card" onclick="window.location.href='games/Rice Battle.html'">
-                    <img src="assets/img/games/RiceBattle/RiceBattle - Cover.jpg" alt="Placeholder">
+                    <img src="assets/img/games/RiceBattle/RiceBattle - Cover.jpg" alt="Rice Battle">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
@@ -145,14 +145,14 @@
                     </div>
                 </div>
                 <div class="game-card" onclick="window.location.href='games/A Little Adventure.html'">
-                    <img src="assets/img/games/ALittleAdventure/ALittleAdventure - Cover.jpg" alt="Placeholder">
+                    <img src="assets/img/games/ALittleAdventure/ALittleAdventure - Cover.jpg" alt="A Little Adventure">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
                     </div>
                 </div>
                 <div class="game-card" onclick="window.location.href='games/BOT A.N.I.C.html'">
-                    <img src="https://placehold.co/300x450?text=BOT%20A.N.I.C" alt="Placeholder">
+                    <img src="https://placehold.co/300x450?text=BOT%20A.N.I.C" alt="BOT A.N.I.C">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="game-card" onclick="window.location.href='games/Archipel.html'">
-                    <img src="https://placehold.co/300x450?text=Archipel" alt="Placeholder">
+                    <img src="https://placehold.co/300x450?text=Archipel" alt="Archipel">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
