🔒️Comment out prototype download buttons in game HTML files

--- a/games/A Little Adventure.html
+++ b/games/A Little Adventure.html
@@ -103,7 +103,7 @@
                 trouver les jetons cachés dans chacun d’entre eux.
             </p>
         </div>
-        <button onclick="window.open('https://drive.google.com/file/d/1mVtrC2cRTI8DI0T2eytNDROx7p7a3r1G/view?usp=sharing', '_blank')">Télécharger le prototype</button>
+        <!-- <button onclick="window.open('https://drive.google.com/file/d/1mVtrC2cRTI8DI0T2eytNDROx7p7a3r1G/view?usp=sharing', '_blank')">Télécharger le prototype</button> -->
     </main>
     <footer>
         <div id="branding">
