--- a/games/Le LAB.html
+++ b/games/Le LAB.html
@@ -104,7 +104,7 @@
                 joueurs l’opportunité de défier leurs amis dans des environnements qu'ils ont eux-mêmes conçus.
             </p>
         </div>
-        <button onclick="window.open('https://drive.google.com/file/d/1_G6ltE7hH8wrITmecVYSm0CogHib0WJs/view?usp=sharing', '_blank')">Télécharger le prototype</button>
+        <!-- <button onclick="window.open('https://drive.google.com/file/d/1_G6ltE7hH8wrITmecVYSm0CogHib0WJs/view?usp=sharing', '_blank')">Télécharger le prototype</button> -->
     </main>
     <footer>
         <div id="branding">
