--- a/games/Rice Battle.html
+++ b/games/Rice Battle.html
@@ -110,7 +110,7 @@
                 opportunités de jeu tactique.
             </p>
         </div>
-        <button onclick="window.open('https://drive.google.com/file/d/1RZY6pJFEC8axm4i6qERfnNTpXdzJos8y/view?usp=sharing', '_blank')">Télécharger le prototype</button>
+        <!-- <button onclick="window.open('https://drive.google.com/file/d/1RZY6pJFEC8axm4i6qERfnNTpXdzJos8y/view?usp=sharing', '_blank')">Télécharger le prototype</button> -->
     </main>
     <footer>
         <div id="branding">
