:lipstick: Improve email link styling and enhance form submission experience with pre-filled email template

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <h4>Email</h4>
-                        <p>contact@lacorbeille.studio</p>
+                        <p><a href="mailto:contact@lacorbeille.studio">contact@lacorbeille.studio</a></p>
                     </div>
                     <div class="contact-item">
                         <h4>Réseaux sociaux</h4>
