:bento: Replace placeholders with new assets

--- a/index.html
+++ b/index.html
@@ -331,13 +331,13 @@
             <div class="news-grid">
                 <article class="news-card">
                     <div class="news-image">
-                        <img src="https://images.pexels.com/photos/1181263/pexels-photo-1181263.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Nouveau site web">
+                        <img src="assets/news/news_website.webp" alt="Nouveau site web" loading="lazy">
                     </div>
                     <div class="news-content">
-                        <div class="news-date">15 Janvier 2025</div>
+                        <div class="news-date">28 Juillet 2025</div>
                         <h3 class="news-title">Nouveau site web en ligne !</h3>
                         <p class="news-excerpt">
-                            Découvrez notre nouveau site web avec une présentation complète de nos projets et actualités.
+                            Découvrez notre nouveau site web avec une présentation complète de nos projets et actualités. Design moderne et architecture optimisée pour une meilleure expérience utilisateur.
                         </p>
                         <a href="#" class="news-link">Lire la suite</a>
                     </div>
@@ -345,13 +345,13 @@
 
                 <article class="news-card">
                     <div class="news-image">
-                        <img src="https://images.pexels.com/photos/442576/pexels-photo-442576.jpeg?auto=compress&cs=tinysrgb&w=600" alt="LeLAB développement">
+                        <img src="assets/news/news_lelab.jpg" alt="LeLAB développement" loading="lazy">
                     </div>
                     <div class="news-content">
-                        <div class="news-date">10 Janvier 2025</div>
+                        <div class="news-date">20 Juillet 2025</div>
                         <h3 class="news-title">LeLAB entre en phase de développement</h3>
                         <p class="news-excerpt">
-                            Notre projet LeLAB franchit une nouvelle étape importante avec le début du développement actif.
+                            Notre projet LeLAB franchit une nouvelle étape importante avec le début du développement actif. Les premières mécaniques de gameplay sont en cours d'implémentation.
                         </p>
                         <a href="#" class="news-link">Lire la suite</a>
                     </div>
@@ -359,13 +359,13 @@
 
                 <article class="news-card">
                     <div class="news-image">
-                        <img src="https://images.pexels.com/photos/1449773/pexels-photo-1449773.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Rice Battle prototype">
+                        <img src="assets/news/news_ricebattle.jpg" alt="Rice Battle prototype" loading="lazy">
                     </div>
                     <div class="news-content">
-                        <div class="news-date">5 Janvier 2025</div>
+                        <div class="news-date">15 Juillet 2025</div>
                         <h3 class="news-title">Rice Battle : Premier prototype jouable</h3>
                         <p class="news-excerpt">
-                            Le prototype de Rice Battle est maintenant jouable ! Découvrez les premières mécaniques de combat.
+                            Le prototype de Rice Battle est maintenant jouable ! Découvrez les premières mécaniques de combat et testez l'expérience de jeu unique que nous développons.
                         </p>
                         <a href="#" class="news-link">Lire la suite</a>
                     </div>
