:sparkles: Implement news modal with dynamic content and styling for enhanced user engagement

--- a/index.html
+++ b/index.html
@@ -447,5 +447,13 @@
         </div>
     </div>
 
+    <!-- News Detail Modal -->
+    <div id="newsModal" class="modal">
+        <div class="modal-content">
+            <span class="modal-close">&times;</span>
+            <div id="newsModalContent"></div>
+        </div>
+    </div>
+
 </body>
 </html>
