:lipstick: Update game descriptions for improved clarity and engagement

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     </div>
                     <div class="game-info">
                         <h3 class="game-title">A Little Adventure</h3>
-                        <p class="game-description">Une petite aventure aux grandes émotions</p>
+                        <p class="game-description">Une petite aventure remplie de casse-têtes</p>
                         <div class="game-platforms">
                             <span class="platform">Windows</span>
                             <span class="platform">Linux</span>
