:recycle: Refactor and modularize JavaScript code for improved maintainability
- Created a new main entry point script (main-new.js) to initialize the application and check loaded modules.
- Modularized existing functionalities into separate classes:
  - AnimationManager for handling scroll animations.
  - ContactForm for managing the contact form submission.
  - GameModal for displaying game details in a modal.
  - ModalManager for centralized modal management.
  - Navigation for handling navigation interactions and effects.
  - NewsModal for displaying news articles in a modal.
- Removed the old monolithic script (main-old.js) to streamline the codebase.
- Enhanced the user experience with smooth scrolling and modal transitions.
- Implemented error handling for data fetching in GameModal and NewsModal.

--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
 
     <!-- Scripts -->
     <script src="scripts/components.js" defer></script>
+    <script src="scripts/modules/modalManager.js" defer></script>
+    <script src="scripts/modules/navigation.js" defer></script>
+    <script src="scripts/modules/gameModal.js" defer></script>
+    <script src="scripts/modules/newsModal.js" defer></script>
+    <script src="scripts/modules/contactForm.js" defer></script>
+    <script src="scripts/modules/animations.js" defer></script>
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
@@ -300,7 +306,7 @@
                     </div>
                 </div>
 
-                <div class="game-card" data-game="archiper">
+                <div class="game-card" data-game="archipel">
                     <div class="game-image">
                         <img src="https://placehold.co/600x400?text=Archipel" alt="Archipel">
                         <div class="game-status concept">Concept</div>
